Z-index fix

--- a/app/bundles/CoreBundle/Assets/css/libraries/builder.less
+++ b/app/bundles/CoreBundle/Assets/css/libraries/builder.less
@@ -24,29 +24,27 @@
 /* BUILDER CSS */
 div[data-slot-handle] {
     cursor: move!important;
-    bottom: 1px;
+    bottom: -1px;
     content: '';
     left: -15px;
     margin: 0;
     padding: 0;
     position: absolute;
     right: -15px;
-    top: 1px;
-    z-index: -1;
+    top: -1px;
     border: 1px solid #4e5e9e;
 }
 
 div[data-slot-focus] {
     cursor: move!important;
-    bottom: 1px;
+    bottom: -1px;
     content: '';
     left: -15px;
     margin: 0;
     padding: 0;
     position: absolute;
     right: -15px;
-    top: 1px;
-    z-index: -1;
+    top: -1px;
     border: 1px solid #4e5e9e;
 }
 
@@ -94,7 +92,6 @@ div[data-slot-toolbar] .btn-danger {
 
 div[data-slot] {
     position: relative;
-    z-index: 5;
 }
 
 .slot-placeholder {
